src/test/ui/inference/issue-83606.stderr
error[E0282]: type annotations needed for `[usize; _]`
  --> $DIR/issue-83606.rs:8:13
   |
LL |     let _ = foo("foo"); //<- Do not suggest `foo::<N>("foo");`!
   |         -   ^^^ cannot infer the value of const parameter `N` declared on the function `foo`
   |         |
   |         consider giving this pattern the explicit type `[_; N]`, where the const parameter `N` is specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
